python/testData/highlighting/bitwiseOrUnionInOlderVersionsErrorIsInstance.py
class A:
    pass

assert isinstance(A(), <error descr="Python version 3.9 does not allow writing union types as X | Y">int | str</error>)